# ai-helidon-labs

./: CLAUDE.md  GEMINI.md  MODULE.bazel  README.md  bazel9-migration.skill
bazel9-migration/: SKILL.md
bazel9-migration/scripts/: normalize_loads.py
docs/superpowers/plans/: 2026-04-03-a2a-grpc-agent.md
docs/superpowers/specs/: 2026-04-03-a2a-grpc-agent-design.md
java/a2a/: BUILD.bazel
java/a2a/base/core/server/service/context/: BUILD.bazel
java/a2a/base/core/server/service/context/src/main/java/io/github/jtpadilla/a2a/core/server/service/persistence/: SkillContext.java  SkillProvider.java  SkillRequest.java  SkillRequestContext.java  SkillRequestContextSimple.java  SkillRequestContextStream.java  SkillRequestSimple.java  SkillRequestStream.java
java/a2a/base/product/simpleagent/: BUILD.bazel
java/a2a/base/sandbox/: BUILD.bazel
java/a2a/base/sandbox/src/main/java/io/github/jtpadilla/a2a/sandbox/: A2AServiceImpl.java  AgentCardFactory.java  Main.java
java/a2a/base/skill/echo/: BUILD.bazel
java/a2a/core/server/: BUILD.bazel
java/a2a/core/server/impl/: BUILD.bazel
java/a2a/core/server/service/context/: BUILD.bazel
java/a2a/product/simpleagent/: BUILD.bazel
java/a2a/skill/echo/: BUILD.bazel
java/example/ai/interactions/demo/researchfrontend/: BUILD.bazel
java/example/ai/langchain4j/001-chatmemory1/: BUILD.bazel
java/example/ai/langchain4j/001-chatwithoutmemory/: BUILD.bazel
java/example/ai/langchain4j/002-chatmemory2/: BUILD.bazel
java/example/ai/langchain4j/003-chatmemory2/: BUILD.bazel
java/example/ai/langchain4j/003-chatmemory3/: BUILD.bazel
java/example/ai/langchain4j/004-chatmemory4/: BUILD.bazel
java/example/ai/langchain4j/004-chatmemoryprompt/: BUILD.bazel
java/example/ai/langchain4j/010-aiservices6/: BUILD.bazel
java/example/ai/langchain4j/012-structured2/: BUILD.bazel
java/example/ai/langchain4j/017-squentialworkflow/: BUILD.bazel
java/example/ai/langchain4j/019-loopworkworkflow1/: BUILD.bazel
java/example/ai/langchain4j/020-parallelflow1/: BUILD.bazel
java/example/ai/langchain4j/020-parallelworkflow1/: BUILD.bazel
java/example/ai/langchain4j/021-parallelmapperworkflow1/: BUILD.bazel
java/example/ai/langchain4j/022-conditionalworkflow1/: BUILD.bazel
java/example/ai/langchain4j/023-conditionalworkflow2/: BUILD.bazel
java/example/ai/langchain4j/024-asynchronousworkflow1/: BUILD.bazel
java/example/ai/langchain4j/028-pureagentic1/: BUILD.bazel
java/example/ai/langchain4j/chatmemory/: BUILD.bazel
java/example/ai/langchain4j/chatmemory/src/main/resources/: application.yaml
java/example/ai/langchain4j/d-tools/033-toolfullexample/: BUILD.bazel
java/example/ai/langchain4j/d-tools/033-toolfullexample1/: BUILD.bazel
java/example/ai/langchain4j/d-tools/034-toolfullexample2/: BUILD.bazel
java/example/ai/langchain4j/e-structresults/036-structresults2/: BUILD.bazel
java/example/ai/util/src/main/java/io/github/jtpadilla/example/util/: GoogleModels.java
java/example/dagger/: BUILD.bazel
java/example/dagger/example/: BUILD.bazel
java/example/dagger/lib/: BUILD
java/example/dagger/src/main/java/example/dagger/: HealthCheckModule.java  HealthMonitor.java  HealthMonitorApp.java  HealthMonitorComponent.java
java/example/dagger/src/main/java/example/dagger/checks/: CpuCheck.java  DiskCheck.java  HealthCheck.java  MemoryCheck.java
java/example/dagger/src/main/java/example/dagger/qualifiers/: FastCheck.java
java/example/helidon/builder/simple/: BUILD.bazel
java/example/helidon/builder/simple/src/main/java/io/github/jtpadilla/example/helidon/builder/simple/: Main.java  ServiceConfigBlueprint.java
java/example/helidon/builder/validation/: BUILD.bazel
java/example/helidon/builder/validation/src/main/java/io/github/jtpadilla/example/helidon/builder/validation/: DatabaseConfigBlueprint.java  Main.java
java/example/helidon/grpc/client/: BUILD.bazel
java/example/helidon/grpc/server/: BUILD.bazel
java/example/helidon/injection/factory/qualifiedfactory/: BUILD.bazel
java/example/helidon/injection/factory/servicefactory/: BUILD.bazel
java/example/helidon/injection/factory/servicefactory/src/main/java/io/github/jtpadilla/example/helidon/injection/factory/servicefactory/: Main.java  MyService.java  MyServiceFactory.java  MyServiceOptionalProvider.java
java/example/helidon/injection/factory/simple/: BUILD.bazel
java/example/helidon/injection/factory/supplier/: BUILD.bazel
java/example/helidon/injection/factory/supplieroptional/: BUILD.bazel
java/example/helidon/injection/greeter/: BUILD.bazel
java/example/helidon/injection/named/: BUILD.bazel
java/example/helidon/injection/namedbytype/: BUILD.bazel
java/example/helidon/injection/programmatic/: BUILD.bazel
java/example/helidon/injection/qualifiers/custom/: BUILD.bazel
java/example/helidon/injection/qualifiers/named/: BUILD.bazel
java/example/helidon/injection/qualifiers/namedbytype/: BUILD.bazel
java/example/helidon/injection/simple/: BUILD.bazel
java/example/helidon/injection/simple/src/main/java/io/github/jtpadilla/example/helidon/injection/simple/: Greeter.java  GreetingInjectionService.java  Main.java
java/example/javelit/004-displaytablemap/: BUILD.bazel
java/example/javelit/007-widgetslider/: BUILD.bazel
java/example/javelit/008-widgetcheckbox/: BUILD.bazel
java/example/javelit/008-widgetcheckboxoptions/: BUILD.bazel
java/example/javelit/013-firstapp/: BUILD.bazel
java/product/iatevaleagent/: BUILD.bazel
java/product/simpleagent/: BUILD.bazel
proto/google/api/: BUILD.bazel
proto/lf/a2a/v1/: BUILD.bazel
(+196 files in other folders)
