package(default_visibility = ["//visibility:public"])

proto_library(
    name = "a2a_proto",
    srcs = ["a2a.proto"],
    deps = [
        "//proto/google/api:annotations_proto",
        "//proto/google/api:client_proto",
        "//proto/google/api:field_behavior_proto",
        "@protobuf//:empty_proto",
        "@protobuf//:struct_proto",
        "@protobuf//:timestamp_proto",
    ],
)
