load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_binary(
    name = "simple",
    srcs = glob(["src/main/java/io/github/**/*.java"]),
    main_class = "io.github.jtpadilla.example.helidon.builder.simple.Main",
    deps = [
        "//java/third_party/helidon:builder",
        "@maven//:org_jspecify_jspecify",
    ],
)
