load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "client",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.helidon.example.grpc.client.GrpcClientMain",
    deps = [
        "//java/third_party/helidon:service",
        "//proto/example/helidon/grpc:echo_java_grpc",
        "//proto/example/helidon/grpc:echo_java_proto",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_netty_shaded",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:org_jspecify_jspecify",
    ],
)
