load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_graalvm//graalvm:defs.bzl", "native_image")

java_binary(
    name = "greeter",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.github.jtpadilla.example.helidon.injection.greeter.Main",
    deps = [
        "//java/lib:helidon",
    ],
)
