load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_binary(
    name = "programmatic",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.github.jtpadilla.example.helidon.injection.programmatic.Main",
    deps = [
        "//java/bootstrap/unit",
        "//java/third_party/helidon:service",
        "@maven//:org_jspecify_jspecify",
    ],
)
