load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_graalvm//graalvm:defs.bzl", "native_image")

java_binary(
    name = "simple",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.github.jtpadilla.example.helidon.injection.simple.Main",
    deps = [
        "//java/lib:helidon",
    ],
)

# native_image(
#     name = "simple_native",
#     executable_name = "simple-native",
#     # Opciones críticas para Helidon/Netty:
#     extra_args = [
#         "-H:+ReportExceptionStackTraces",
#         "--no-fallback",
#         "--install-exit-handlers",
#     ],
#     main_class = "io.github.jtpadilla.example.helidon.injection.simple.Main",
#     deps = [":app_bin"],
# )
