load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_binary(
    name = "service-factory",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.github.jtpadilla.example.helidon.injection.factory.servicefactory.Main",
    deps = [
        "//java/lib:helidon",
        "@maven//:org_jspecify_jspecify",
    ],
)
