load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_binary(
    name = "supplier-optional",
    srcs = glob(["src/main/java/io/github/**/*.java"]),
    main_class = "io.github.jtpadilla.example.helidon.injection.factory.supplier.Main",
    deps = [
        "//java/third_party/helidon:service",
        "@maven//:org_jspecify_jspecify",
    ],
)
